2012-07-15
lock all functionis of SEntre, for example, bb_freq.